--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,15 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# Add the navigation links here
+nav_links:
+  - name: "Home"
+    link: "/"
+  - name: "About"
+    link: "/about/"
+  - name: "Welcome"
+    link: "/welcome/"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
