--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@
 
 title: My Approximation
 email: henrylihao@outlook.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/henry.github.io" # the subpath of your site, e.g. /blog
+description: |
+  "在终极的分析中，一切知识都是历史；在抽象的意义下，一切科学都是数学；在理性的基础上，所有的判断都是统计学"。
+  
+  “All models are wrong, but some are useful" - George E.P.Box
+baseurl: "/henry.github.io"
 url: "https://henryli121.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: henry_lihao
 github_username:  henryli121
