--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: My Approximation
 email: henrylihao@outlook.com
-description: |
+description: >
   "在终极的分析中，一切知识都是历史；在抽象的意义下，一切科学都是数学；在理性的基础上，所有的判断都是统计学"。
   
   “All models are wrong, but some are useful" - George E.P.Box
@@ -34,6 +34,10 @@ permalink: /:categories/:year/:month/:day/:title/
 theme: minima
 plugins:
   - jekyll-feed
+
+collections:
+  photographs:
+    output: true
 
 # Add the navigation links here
 nav_links:
