--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@
 
 title: My Approximation
 email: henrylihao@outlook.com
-description: >
+description: |
   "在终极的分析中，一切知识都是历史；在抽象的意义下，一切科学都是数学；在理性的基础上，所有的判断都是统计学"。
-
+  <br>
   “All models are wrong, but some are useful" - George E.P.Box
 baseurl: "/henry.github.io"
 url: "https://henryli121.github.io" # the base hostname & protocol for your site, e.g. http://example.com
