--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: |
 description-en: |
   "All knowledge is, in final analysis, history. All sciences are, in the abstract, mathematics. All judgements are, in their rationale, statistics." -- C. R. Rao 
 
-baseurl: "/henry.github.io"
+baseurl: ""
 url: "https://henryli121.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: henry_lihao
 github_username:  henryli121
